app/static/css/navbar.css
/* Navbar container */
.navbar {
  float: left;
  overflow: hidden;
  background-color: var(--navbarBackgroundColor);
  border-radius: 4px;
  display: flex;
  flex-wrap: nowrap;
  min-width: 410px;
  z-index: 15;
}

/* Links inside the navbar */
.navbar a {
  float: left;
  font-size: 12pt;
  text-align: center;
  padding: 3px 12px;
  text-decoration: none;
}

.keyShortCut {
  color: var(--keyboardShortCutColor);
  font-weight: bold;
  /* border: 1px solid darkblue;
  border-radius: 2px; */
  align-self: flex-end;
  margin-left: 5px;
}

.keyShortCut.mac {
  display: none;
}

.keyShortCut.mac.platform-mac {
  display: block;
}

.keyShortCut.nonmac {
  display: none;
}

.keyShortCut.nonmac.platform-nonmac {
  display: block;
}

.keyShortCut > .keyIcon {
  border-color: var(--keyboardShortCutColor);
  border-width: 1px;
}

/* The dropdown container */
.dropdown {
  float: left;
  overflow: hidden;
  white-space: nowrap;
  z-index: 12;
}

/* Dropdown button */
.dropdown .dropbtn {
  cursor: pointer;
  font-size: 12pt;
  border: none;
  outline: none;
  color: var(--textColor);
  padding: 3px 12px;
  background-color: inherit;
  font-family: inherit;
  /* Important for vertical align on mobile phones */
  margin: 0;
  /* Important for vertical align on mobile phones */
}

/* Add a background color to navbar links on hover */
.navbar a:hover,
.dropdown:hover .dropbtn {
  background-color: var(--dropdownHeadingColor);
}

/* Dropdown content (hidden by default) */
.dropdown-content {
  display: none;
  position: absolute;
  background-color: var(--dropdownBackgroundColor);
  /* filter: brightness(140%); */
  /* background-color: #edf2f7; // lightsteelblue 90%: #dbe4f0 // 95%: #edf2f7 */
  opacity: .99;
  min-width: 160px;
  border: 1px solid darkgray;
  border-top-right-radius: 4px;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  box-shadow: 0px 8px 12px 0px rgba(0, 0, 0, 0.2);
  overflow-y: auto;
  max-height: 90%;
  z-index: 99;
  padding-bottom: 6px;
}

#GithubMenu {
  min-height: 90%;
}

.dropdown-line {
  /* background-color: darkgray; */
  border: 1px solid var(--dropdownBorderColor);
  border-radius: 1px;
  margin: 4px 10px;
}

.dropdown-head {
  background-color: var(--dropdownBackgroundColor);
  font-weight: 900;
}

/* Links inside the dropdown */
.dropdown-content a {
  cursor: pointer;
  float: none;
  color: var(--textColor);
  padding: 3px 12px;
  text-decoration: none;
  display: flex;
  align-items: center;
  justify-content: space-between;
  text-align: left;
}

.dropdown-content a .btn {
  background-color: var(--settingsBackgroundAlternativeColor);
}

.dropdown-content a:hover .btn {
  background-color: var(--settingsBackgroundColor);
}

#GithubMenu.dropdown-content a {
  justify-content: flex-start;
}

#GithubLoginLink {
  float: unset;
  color: unset;
  text-align: unset;
  padding: unset;
}

.dropdown-content input,
.dropdown-content table {
  margin: 3px 12px;
}

/* Add a grey background color to dropdown links on hover */
.dropdown-content a:hover {
  background-color: var(--dropdownHeadingColor);
}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content.show {
  display: block;
}

#logTable {
  font-size: 8pt;
  white-space: nowrap;
  color: var(--textColor);
}

#logTable a {
  font-size: unset;
}

#logTable tr:nth-child(even) {
  background-color: var(--settingsBackgroundAlternativeColor);
}

#GithubLogo,
#forkRepoGithubLogo {
  fill: var(--textColor);
  height: .75em;
  margin-right: -.2em;
}

#forkRepoGithubLogo {
  vertical-align: Baseline;
  filter: invert(1);
}

@keyframes spinning {
  from {
    transform: rotate(0deg)
  }

  to {
    transform: rotate(359deg)
  }
}

.clockwise {
  animation-name: spinning;
  animation-duration: 1s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
}

@keyframes reversing {
  from {
    transform: rotate(0deg)
  }

  to {
    transform: rotate(-359deg)
  }
}

.anticlockwise {
  animation-name: reversing;
  animation-duration: 1s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
}

.menu-icon {
  width: 16px;
  margin-right: 10px;
  margin-left: 26px;
}

.wide-menu-icon {
  width: 48px;
  margin-right: 4px;
  margin-left: 0px;
}

.fileStatus {
  font-size: 10pt;
  font-family: monospace;
  margin-left: 1em;
  padding: 3px 12px;
  background: var(--backgroundColor);
  color: var(--fileStatusColor);
  white-space: nowrap;
  display: flex;
  align-content: center;
  gap: 0.2em;
}

.fileStatus #schemaStatus {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 6pt;
  font-weight: bold;
  border-width: 1.5px;
  border-style: solid;
  border-radius: 4px;
  padding: 2px;
  cursor: default;
}

.fileStatus #fileName {
  white-space: pre;
}

.fileStatus #fileChanged {
  margin-left: -.2em;
  margin-right: .5em;
}

.fileStatus.changed {
  color: var(--fileStatusChangedColor);
}

.fileStatus.warn #fileName,
.fileStatus.warn #fileLocation,
#commitFileName.warn {
  text-decoration: var(--fileStatusWarnColor) dotted underline;
}

.fileStatus #fileStorageExceeded.warn {
  color: var(--fileStatusWarnColor);
  font-weight: bolder;
  background: var(--settingsLinkBackgroundColor);
  border: 1px solid var(--fileStatusWarnColor);
  cursor: default;
  padding: 1px 3px;
}

#commitFileNameEdit {
  font-size: 12pt;
  float: none;
  color: var(--textColor);
  padding: 3px 12px;
  display: block;
  text-align: left;
}

#commitFileName {
  text-decoration: var(--textColor) dotted underline;
  background: var(--dropdownHeadingColor);
  padding: 2px 2px;
  cursor: text;
}

#commitFileName:focus {
  background: var(--textColor);
  color: var(--dropdownHeadingColor);
}

#commitMessageInput.warn {
  background: var(--textColor);
  color: var(--dropdownHeadingColor);
  border: 1px dotted var(--fileStatusWarnColor);
}

#commitMessageInput[disabled],
#commitButton[disabled] {
  cursor: not-allowed;
}

